--- a/impact.html
+++ b/impact.html
@@ -26,9 +26,15 @@
 						</div>
 					
 						<div class="leftside">
+							<img class="propic" src="img/impact1.jpg"/>
+							<img class="propic" src="img/impact2.jpg"/>
+							<img class="propic" src="img/impact3.jpg"/>
 							
 						</div>
-						<div class="bottomside">
+						<div class="bottomside2">
+							<h3>Impact</h3>
+							<p class="date"></p>
+							<p class="description">Created a new brand called impact. It is a brand of shoe made specifically for athletes. Designed all of the branding and created a couple pages of the website.</p>
 						</div>
 
 					</div>
