--- a/impact.html
+++ b/impact.html
@@ -19,7 +19,8 @@
 							</ul>
 					</div>
 				</header> 
-					
+					<a class="arrow prev" href="#" ng-click="nextSlide()"></a>
+    				<a class="arrow next" href="#" ng-click="prevSlide()"></a>
 					<div class='wrapperproject'>
 
 						<div class="space">
@@ -33,7 +34,11 @@
 						</div>
 						<div class="bottomside2">
 							<h3>Impact</h3>
-							<p class="date"></p>
+							<h4>2013</h4>
+							
+						</div>
+
+						<div class="bottomside3">
 							<p class="description">Created a new brand called impact. It is a brand of shoe made specifically for athletes. Designed all of the branding and created a couple pages of the website.</p>
 						</div>
 
