--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html>
+	<html ng-app="website">
 		<head>
 			<title>Amber Danielle UX</title>
 			<link rel="stylesheet" type="text/css" href="normalize.css">
@@ -88,9 +88,15 @@
 							<a href="index.html"><img class="coverpic"src="img/jordanscover.jpg" alt="Icecream Brand"/></a>
 						</div>
 
-						<div class="project">
-							<a href="index.html"><img class="coverpic"src="img/indycover.jpg" alt="Icecream Brand"/></a>
+						<div class="project" >
+							<a href="" class="indy"><img class="coverpic"  ng-click="currentIndex= 1"  src="img/indycover.jpg" alt="Icecream Brand"/></a>
 						</div>
+
+
+					<!-- 	<div class="project" >
+							<a href="impact.html"><img class="coverpic"  ng-click="currentIndex= 1" class="indy" src="img/indycover.jpg" alt="Icecream Brand"/></a>
+						</div> -->
+
 						<div class="project">
 							<a href="index.html"><img class="coverpic"src="img/lexicover.jpg" alt="Icecream Brand"/></a>
 						</div>
@@ -108,6 +114,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
 <script src="/bower_components/angular-touch/angular-touch.js"></script>
 <script src="js/app.js"></script>
+<script src="js/jq.js"></script>
 			<body>
 
 	</html>
